Code cleanup, removed support for mutliple envs and robots, Code documented

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,17 @@ __pycache__
 IsaacSim-ros_workspaces/build_ws
 envs
 Screenshot from 2024-09-24 10-09-05.png
+frames_2024-10-04_10.37.12.gv
+frames_2024-10-04_10.37.12.pdf
+frames_2024-10-04_10.42.16.gv
+frames_2024-10-04_10.42.16.pdf
+frames_2024-10-04_10.43.22.gv
+frames_2024-10-04_10.43.22.pdf
+frames_2024-10-04_10.43.39.gv
+frames_2024-10-04_10.43.39.pdf
+frames_2024-10-04_10.43.46.gv
+frames_2024-10-04_10.43.46.pdf
+frames_2024-10-04_10.44.49.gv
+frames_2024-10-04_10.44.49.pdf
+frames_2024-10-04_10.45.26.gv
+frames_2024-10-04_10.45.26.pdf
